# mini-gpt2

./: .env.example  .gitignore  README.md  evaluate.py  hellaswag.py  plot_metrics.py  pyproject.toml  train.py
assets/: log.txt  metrics.csv
src/eval/: __init__.py  __main__.py  generate.py  peek_dataset.py  prompt.py
src/gpt/: __init__.py  dataset.py  train.py
