[project]
name = "gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.3.2",
    "dotenv>=0.9.9",
    "matplotlib>=3.10.1",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
]

[tool.uv.sources]
hellaswag = { path = "./hellaswag.py" }
